Fixed z-index for resume section

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -635,7 +635,7 @@ section.portfolio-items {
     position: fixed;
     opacity: 0;
     /* Hides the modal window by default */
-    z-index: 2;
+    z-index: 3;
     width: 100%;
     height: 100vh;
     background: #fff;
